when entering custom inputs, selected key automatically jumps to the next to avoid clicks. Escape key now closes both custom ui and prerences menus

--- a/DvorakAcademy/logic/main.css
+++ b/DvorakAcademy/logic/main.css
@@ -517,6 +517,7 @@ input:checked + .slider:before {
 
 .selectedInputKey, .selectedInputKey:hover {
 	border-color: white;
+	opacity: .9;
 }
 
 .pulse {
